[tool.poetry]
name = "wowhead-scraper"
version = "0.1.0"
description = "Wowhead scraper using Beautiful Soup"
authors = ["Ryan Davis <ryancraigdavis@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
